# BugBountyOS

./: .env.example  .gitattributes  .gitignore  .jscpd.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  import_vectors.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/BugBountyOS/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/agents/: backend.md  frontend.md  orchestrator.md  platform.md
.claude/commands/: push-upstream.md
.claude/homunculus/instincts/inherited/: BugBountyOS-instincts.yaml
.claude/skills/BugBountyOS/: SKILL.md
.codex/: AGENTS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-iso.yml  ci.yml  codeql.yml  dependency-review.yml  lint.yml  security.yml  tests.yml
adapters/airtable/: README.md  scope_mapper.py
adapters/mcp/: README.md  server.py
contracts/: cognition.yaml  dashboard.yaml  pipeline.yaml  recon.yaml  redsage.yaml  sensory.yaml  storage.yaml
control-plane/registry/: vectors.yaml
docs/: ARCHITECTURE.md  CONTRACTS.md
kernel/constitution/: INTERFACE.md
tests/: conftest.py  test_adapters.py  test_airtable_scope_mapper.py  test_contracts.py  test_import_vectors.py  test_mcp_server.py  test_nlp_processor.py  test_pipeline.py  test_repo_structure.py  test_storage.py  test_substrate_guardrails.py
vectors/dashboard/: .eslintrc.json  .prettierignore  README.md  package-lock.json  package.json  replit.nix  tailwind.config.ts  tsconfig.json  vite.config.ts
vectors/dashboard/client/: index.html
vectors/dashboard/client/src/: App.tsx  index.css
vectors/dashboard/client/src/components/: app-shell.tsx
vectors/dashboard/client/src/components/ui/: avatar.tsx  button.tsx  (+12 more)
vectors/dashboard/client/src/hooks/: use-assets.ts  use-programs.ts  use-toast.ts  use-user.ts
vectors/dashboard/client/src/pages/: dashboard.tsx  not-found.tsx  placeholder.tsx  scope.tsx
vectors/dashboard/db/: index.ts  schema.ts
vectors/dashboard/server/routes/: assets.ts  programs.ts  recon.ts
vectors/dashboard/server/types/: modules.d.ts
vectors/pipeline/: README.md  app.py  models.py  nlp_processor.py  requirements.txt  routes.py
vectors/pipeline/tests/: conftest.py  test_nlp_processor.py  test_routes.py
vectors/storage/: README.md  app.py  models.py  routes.py  schema_snowflake.sql
vectors/storage/tests/: conftest.py  test_routes.py
vectors/substrate/: __init__.py  processor.py
vectors/substrate/guardrails/: __init__.py  input_scanner.py  output_validator.py
