[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbountyos"
version = "0.1.0"
description = "Workflow-plane operating environment for authorized bug bounty research."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "canstralian" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "vectors*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "vectors/dashboard/client",
    "vectors/dashboard/server",
    "vectors/dashboard/db",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "S603",  # subprocess call: not all are insecure
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = [
    "vectors/dashboard/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "vectors.pipeline.models"
disable_error_code = ["name-defined", "misc"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=adapters",
    "--cov=vectors",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=40",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:flask_sqlalchemy.*",
]

[tool.coverage.run]
branch = true
source = ["adapters", "vectors"]
omit = [
    "vectors/dashboard/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
